[tool.poetry]
name = "text-to-urn"
version = "0.1.0"
description = ""
authors = ["Lars Magne Tungland <larsmtungland@gmail.com>"]
readme = "README.md"
packages = [{include = "text_to_urn"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
